--- a/EmployeeManagement/src/main/resources/templates/layout/menu.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/menu.html
@@ -8,7 +8,7 @@
 	<div layout:fragment="menu" class="bg-light">
 		<ul class="nav nav-pills nav-stacked">
 			<li role="presentation"><a class="nav-link"
-				th:href="@{'/employee/list'}">ユーザ⼀覧</a></li>
+				th:href="@{'/employee/list'}">社員一覧</a></li>
 		</ul>
 	</div>
 </body>
