--- a/EmployeeManagement/src/main/resources/templates/employee/list.html
+++ b/EmployeeManagement/src/main/resources/templates/employee/list.html
@@ -3,26 +3,26 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/layout}">
 <head>
-<title>ユーザー⼀覧</title>
+<title>社員一覧</title>
 <!-- 個別CSS読込 -->
 <link rel="stylesheet" th:href="@{/css/employee/list.css}">
 </head>
 <body>
 	<div layout:fragment="content">
 		<div class="header border-bottom">
-			<h1 class="h2">ユーザー一覧画面</h1>
+			<h1 class="h2">社員一覧画面</h1>
 		</div>
 		<!-- 検索 -->
 		<div class="mb-4">
-			<form id="user-search-form" method="post" th:a ction="@{/employee/list}"
-				class="form-inline" th:object="${userListForm}">
+			<form id="user-search-form" method="post" th:action="@{/employee/list}"
+				class="form-inline" th:object="${employeesListForm}">
 				<div class="form-group">
-					<label for="emp_id" class="mr-2">ユーザーID </label> <input type="text"
-						class="form-control" th:field="*{emp_id}" />
+					<label for="employeeId" class="mr-2">社員番号</label>
+					<input type="text" class="form-control" th:field="*{employeeId}" />
 				</div>
 				<div class="form-group mx-sm-3">
-					<label for="emp_name" class="mr-2">ユーザー 名</label> <input
-						type="text" class="form-control" th:field="*{emp_name}" />
+					<label for="employeeName" class="mr-2">氏名</label>
+					<input type="text" class="form-control" th:field="*{employeeName}" />
 				</div>
 				<button class="btn btn-primary" type="submit">検索</button>
 			</form>
@@ -32,23 +32,31 @@
 			<table class="table table-striped table-bordered table-hover">
 				<thead class="thead-light">
 					<tr>
-						<th class="th-width">ユーザーID</th>
-						<th class="th-width">ユーザー名</th>
-						<th class="th-width">誕生日</th>
-						<th class="th-width">年齢</th>
-						<th class="th-width">性別</th>
+						<th class="th-width">社員番号</th>
+						<th class="th-width">パスワード</th>
+						<th class="th-width">氏名</th>
+						<th class="th-width">電話番号</th>
+						<th class="th-width">Eメール</th>
+						<th class="th-width">入社日</th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="item: ${userList}">
-						<td th:text="${item.emp_id}"></td>
-						<td th:text="${item.emp_name}"></td>
-						<td th:text="${#dates.format(item.emp_join_date, 'YYYY/MM/dd')}"></td>
-						<td th:text="${item.age}"></td>
-						<td th:text="${item.gender == 1} ? '男性': '女性'"></td>
+					<tr th:each="item: ${employeesList}">
+						<td th:text="${item.employeeId}"></td>
+						<td th:text="${item.employeePassword}"></td>
+						<td th:text="${item.employeeName}"></td>
+						<td th:text="${item.employeePhone}"></td>
+						<td th:text="${item.employeeEmail}"></td>
+						<td th:text="${#dates.format(item.employeeJoinDate, 'YYYY/MM/dd')}"></td>
+					<!-- TODO:更新と削除を追加する -->
 						<td><a class="btn btn-primary"
-							th:href="@{'/employee/detail/' + ${item.emp_id}}"> 詳細 </a></td>
+							th:href="@{'/employee/edit/' + ${item.employeeId}}"> 編集 </a></td>
+						<td><a class="btn btn-primary"
+							th:href="@{'/employee/edit/' + ${item.employeeId}}"> 削除 </a></td>
+
+						<!-- <td><button class="btn btn-danger" type="submit" name="delete">削除</button></td>
+						<td><button class="btn btn-primary" type="submit" name="update">更新</button></td> -->
 					</tr>
 				</tbody>
 			</table>
