--- a/EmployeeManagement/src/main/resources/templates/layout/header.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/header.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/
-layout"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/layout}">
 <head>
 </head>
@@ -10,7 +9,7 @@ layout"
 		class="navbar navbar-inverse navbar-fixed-topnavbar-dark bg-dark">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">SpringSample</a>
+				<a class="navbar-brand" href="#">社員管理システム</a>
 			</div>
 			<form method="post" th:action="@{/logout}">
 				<button class="btn btn-link pull-right navbar-brand" type="submit">
