--- a/EmployeeManagement/src/main/resources/templates/employee/edit.html
+++ b/EmployeeManagement/src/main/resources/templates/employee/edit.html
@@ -11,7 +11,7 @@ ayout"
 <body>
 	<div layout:fragment="content">
 		<div class="header border-bottom">
-			<h1 class="h2">ユーザー詳細</h1>
+			<h1 class="h2">社員情報編集</h1>
 		</div>
 		<form id="user-list-form" method="post"
 			th:action="@{/employee/edit}" class="form-signup"
