--- a/EmployeeManagement/src/main/resources/templates/layout/header.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/header.html
@@ -9,12 +9,15 @@
 		class="navbar navbar-inverse navbar-fixed-topnavbar-dark bg-dark">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">社員管理システム</a>
+				<a class="navbar-brand" href="/employee/list">社員管理システム</a>
 			</div>
-			<form method="post" th:action="@{/logout}">
+			<!-- <div class="navbar-header">
+				<a class="navbar-brand" href="/employee/signup">新規社員登録</a>
+			</div> -->
+			<!-- <form method="post" th:action="@{/logout}">
 				<button class="btn btn-link pull-right navbar-brand" type="submit">
 					ログアウト</button>
-			</form>
+			</form> -->
 		</div>
 	</nav>
 </body>
