--- a/EmployeeManagement/src/main/resources/templates/layout/layout.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/layout.html
@@ -6,7 +6,8 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- 共通CSS読込 -->
-<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{/css/layout/layout.css}">
 <!-- 共通JS読込 -->
 <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
