--- a/EmployeeManagement/src/main/resources/templates/layout/menu.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/menu.html
@@ -10,6 +10,10 @@
 			<li role="presentation"><a class="nav-link"
 				th:href="@{'/employee/list'}">社員一覧</a></li>
 		</ul>
+		<ul class="nav nav-pills nav-stacked">
+			<li role="presentation"><a class="nav-link"
+				th:href="@{'/employee/signup'}">新規社員登録</a></li>
+		</ul>
 	</div>
 </body>
 </html>
