追加課題以外の実装終了

--- a/EmployeeManagement/src/main/resources/templates/employee/edit.html
+++ b/EmployeeManagement/src/main/resources/templates/employee/edit.html
@@ -8,7 +8,7 @@ ayout"
 <!-- CSS読込 -->
 <link rel="stylesheet" th:href="@{/css/employee/list.css}">
 </head>
-<body>
+<body class="bg-light">
 	<div layout:fragment="content">
 		<div class="header border-bottom">
 			<h1 class="h2">社員情報編集</h1>
@@ -61,7 +61,7 @@ ayout"
 			<!-- ボタンエリア -->
 			<div class="text-center">
 				<!-- 削除ボタン -->
-				<button class="btn btn-danger" type="submit" name="delete">削除</button>
+				<!-- <button class="btn btn-danger" type="submit" name="delete">削除</button> -->
 				<!-- 更新ボタン -->
 				<button class="btn btn-primary" type="submit" name="update">更新</button>
 			</div>
