--- a/EmployeeManagement/src/main/resources/templates/department/sector.html
+++ b/EmployeeManagement/src/main/resources/templates/department/sector.html
@@ -14,8 +14,6 @@
 		</div>
 		<!-- 一覧表示 -->
 		<div>
-			<!-- <form id="user-detail-form" method="post" th:action="@{/user/detail}"
-				class="form-signup" th:object="${userDetailForm}"> -->
 			<table class="table table-striped table-bordered table-hover">
 				<thead class="thead-light">
 					<tr>
@@ -30,48 +28,22 @@
 					</tr>
 				</thead>
 				<tbody>
-					<!-- th:object="${departmentSectorForm}" -->
 					<tr>
-						<!-- <td th:text="*{employeeId}"></td>
-						<td th:text="*{employeeName}"></td> -->
-						<!-- <td th:text="*{salesList.area}"></td> -->
-
-						<!-- 旧HTMLの残骸、問題なければ消す -->
-					<tr th:each="emp: ${employeesList}">
-						<td th:text="${emp.employeeId}"></td>
-						<td th:text="${emp.employeeName}"></td>
-						<th:block th:each="sale: ${salesList}">
-							<td th:text="${sale.area}"></td>
-							<td th:text="${sale.sales.profit}"></td>
-							<td th:text="${sale.sales.customer}"></td>
-							<td th:text="${sale.sales.updateTime}"></td>
-						</th:block>
-
-						<!-- 検証用 -->
-						<th:block th:each="sale: ${salesList}">
-							<td th:text="${sale.area}"></td>
-							<td th:text="${sale.sales.profit}"></td>
-							<td th:text="${sale.sales.customer}"></td>
-							<td th:text="${sale.sales.updateTime}"></td>
-						</th:block>
-
+					<tr th:each="item: ${departmentSectorList}">
+						<td th:text="${item.employeeId}"></td>
+						<td th:text="${item.employeeName}"></td>
+						<td th:text="${item.area}"></td>
+						<td th:text="${item.profit}"></td>
+						<td th:text="${item.customer}"></td>
+						<td th:text="${#dates.format(item.updateTime,'YYYY/MM/dd HH:mm:ss')}"></td>
 						<!-- TODO:更新と削除を追加する -->
-						<!-- 	<td><a class="btn btn-primary"
-						th:href="@{'/department/edit' + ${emp.employeeId}}">編集</a></td>
-					<td><a class="btn btn-danger"
-						th:href="@{'/employee/delete/' + ${emp.employeeId}}">退職</a></td> -->
+						<td><a class="btn btn-primary"
+							th:href="@{'/department/employee/' + ${item.employeeId}}">編集</a></td>
+						<td><a class="btn btn-danger"
+							th:href="@{'/department/retire' + ${item.employeeId}}">退職</a></td>
 					</tr>
-
-					<!-- 検証用 -->
-					<!-- 	<tr th:each="sale: ${salesList}">
-						<td th:text="${sale.area}"></td>
-						<td th:text="${sale.sales.profit}"></td>
-						<td th:text="${sale.sales.customer}"></td>
-						<td th:text="${sale.sales.updateTime}"></td>
-					</tr> -->
 				</tbody>
 			</table>
-			<!-- </form> -->
 		</div>
 	</div>
 </body>
