--- a/EmployeeManagement/src/main/resources/templates/layout/menu.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/menu.html
@@ -18,6 +18,10 @@
 			<li role="presentation"><a class="nav-link"
 				th:href="@{'/department'}">部門一覧</a></li>
 		</ul>
+				<ul class="nav nav-pills nav-stacked">
+			<li role="presentation"><a class="nav-link"
+				th:href="@{'/department/sector'}">社員別営業成績</a></li>
+		</ul>
 	</div>
 </body>
 </html>
