jsボタングレーアウト追加

--- a/EmployeeManagement/src/main/resources/templates/employee/edit.html
+++ b/EmployeeManagement/src/main/resources/templates/employee/edit.html
@@ -60,10 +60,8 @@ ayout"
 			</table>
 			<!-- ボタンエリア -->
 			<div class="text-center">
-				<!-- 削除ボタン -->
-				<!-- <button class="btn btn-danger" type="submit" name="delete">削除</button> -->
 				<!-- 更新ボタン -->
-				<button class="btn btn-primary" type="submit" name="update">更新</button>
+				<button class="btn btn-primary" type="button" name="update" >更新</button>
 			</div>
 		</form>
 	</div>
