--- a/EmployeeManagement/src/main/resources/templates/department/sector.html
+++ b/EmployeeManagement/src/main/resources/templates/department/sector.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <head>
 <title>社員一覧</title>
 <!-- 個別CSS・Js読込 -->
-<link rel="stylesheet" th:href="@{/css/employee/list.css}">
-<script th:src="@{/js/sector.js}"></script>
+<link rel="stylesheet" th:href="@{/css/department/list.css}">
+<script th:src="@{/js/sector.js}" type="text/javascript"></script>
 </head>
 <body class="bg-light">
 	<div layout:fragment="content">
 		<div class="header border-bottom">
 			<h1 class="h2">社員別一覧画面</h1>
 		</div>
-		<div class="container">
-			<table class="table">
+
+			<table class="table table-borderless">
 				<tr>
-					<td><input type="radio" id="all" name="radio" value="全職員"
-						onclick="selectClick()" checked>全職員
 					<td>
-					<td><input type="radio" id="working" name="radio" value="在籍社員"
-						onclick="selectClick()">在籍社員
+						<input type="radio" id="all" name="radio" value="全職員" onclick="selectClick()" checked>全職員
+					</td>
 					<td>
-					<td><input type="radio" id="retire" name="radio" value="退職社員"
-						onclick="selectClick()">退職社員
+						<input type="radio" id="working" name="radio" value="在籍社員" onclick="selectClick()">在籍社員
+					</td>
 					<td>
+						<input type="radio" id="retire" name="radio" value="退職社員" onclick="selectClick()">退職社員
+					</td>
 				</tr>
 			</table>
-		</div>
+
 		<!-- 一覧表示 -->
+
+
 		<div>
 			<table class="table table-striped table-bordered table-hover">
 				<thead class="thead-light">
@@ -45,28 +45,36 @@
 					</tr>
 				</thead>
 				<tbody id="exsitsList">
+
 					<!-- MEMO: exsitsClass:活性化 bg-secondary:非活性 -->
-					<tr th:each="item: ${departmentList}"
-						th:classappend="${item.employeeExsits}? 'exsits' : 'bg-secondary'">
+					<tr th:each="item: ${departmentList}" th:classappend="${item.employeeExsits}? 'exsits' : 'bg-secondary'">
 						<td th:text="${item.employeeId}"></td>
 						<td th:text="${item.employeeName}"></td>
 						<td th:text="${item.area}"></td>
 						<td th:text="${item.profit}"></td>
 						<td th:text="${item.customer}"></td>
-						<td
-							th:text="${#dates.format(item.updateTime,'YYYY/MM/dd HH:mm:ss')}"></td>
-						<td><a class="btn btn-primary"
-							th:href="@{'/department/employee/' + ${item.employeeId}}">編集</a></td>
-						<!-- <td><a class="btn btn-danger"
-							th:href="@{'/department/retire/' + ${item.employeeId}}">退職</a></td> -->
-						<td><button class="btn btn-danger" type="button" onClick="retireClick()">退職</button></td>
-						<!-- <td><a class="btn btn-danger" disabled>退職</a></td> -->
-						<!-- 検証用 -->
+						<td th:text="${#dates.format(item.updateTime,'YYYY/MM/dd HH:mm:ss')}"></td>
+						<!-- ボタンエリア -->
+						<!-- FIXME:入れ子になって見にくい + 冗長的なので修正したい -->
+						<td>
+							<a th:href="@{'/department/employee/' + ${item.employeeId}}">
+								<button class="btn btn-primary" th:disabled="${item.employeeExsits} == false">編集</button>
+							</a>
+						</td>
+						<!-- 	<form id="user-detail-form" method="post" th:action="@{/department/sector}"> -->
+
+						<!-- class="form-signup" th:object="${userDetailForm}" -->
+						<!-- <input type="hidden" th:field="*{userId}" /> -->
+
+						<td>
+							<button class="btn btn-danger" type="button" id="retire" name="retire" onClick="retireClick()" th:disabled="${item.employeeExsits} == false" >退職</button>
+						</td>
 						<td th:text="${item.employeeExsits}"></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+
 	</div>
 </body>
 </html>
