--- a/EmployeeManagement/src/main/resources/templates/department/sector.html
+++ b/EmployeeManagement/src/main/resources/templates/department/sector.html
@@ -5,76 +5,103 @@
 <!-- 個別CSS・Js読込 -->
 <link rel="stylesheet" th:href="@{/css/department/list.css}">
 <script th:src="@{/js/sector.js}" type="text/javascript"></script>
+
+
+<!-- Jquery確認 -->
+<script>
+/* window.addEventListener('DOMContentLoaded', function(){
+	alert('jQuery is ready.')
+	}); */
+/* $(function() { // if document is ready
+	alert('jQuery is ready.')
+}); */
+
+
+
+// jQueryが読まれない時の対処
+/* window.addEventListener('DOMContentLoaded', function(){
+	  jQueryの処理
+	});
+window.onload = function(){
+	  jQueryの処理
+	}; */
+</script>
+
+
 </head>
 <body class="bg-light">
 	<div layout:fragment="content">
+	<!-- <button class="btn btn-danger" id="test" data-id="data-idテスト" type="button">テスト</button> -->
 		<div class="header border-bottom">
 			<h1 class="h2">社員別一覧画面</h1>
 		</div>
 
-			<table class="table table-borderless">
-				<tr>
-					<td>
-						<input type="radio" id="all" name="radio" value="全職員" onclick="selectClick()" checked>全職員
-					</td>
-					<td>
-						<input type="radio" id="working" name="radio" value="在籍社員" onclick="selectClick()">在籍社員
-					</td>
-					<td>
-						<input type="radio" id="retire" name="radio" value="退職社員" onclick="selectClick()">退職社員
-					</td>
-				</tr>
-			</table>
-
+		<table class="table table-borderless">
+			<tr>
+				<td>
+					<input type="radio" id="all" name="radio" value="全職員" onclick="selectClick()" checked>全職員
+				</td>
+				<td>
+					<input type="radio" id="working" name="radio" value="在籍社員" onclick="selectClick()">在籍社員
+				</td>
+				<td>
+					<input type="radio" id="retire" name="radio" value="退職社員" onclick="selectClick()">退職社員
+				</td>
+			</tr>
+		</table>
 		<!-- 一覧表示 -->
 
+		<!-- TODO:jsでpostする -->
+		<!-- https://it-kyujin.jp/article/detail/1152/ -->
+		<form id="user-detail-form">
+			<!-- th:action="@{/department/sector}" method="post" -->
 
-		<div>
-			<table class="table table-striped table-bordered table-hover">
-				<thead class="thead-light">
-					<tr>
-						<th class="th-width">社員番号</th>
-						<th class="th-width">氏名</th>
-						<th class="th-width">担当地区</th>
-						<th class="th-width">売上</th>
-						<th class="th-width">保有顧客数</th>
-						<th class="th-width">更新日時</th>
-						<th></th>
-						<th></th>
-						<th class="th-width">存在要否</th>
-					</tr>
-				</thead>
-				<tbody id="exsitsList">
+			<!-- class="form-signup" th:object="${userDetailForm}" -->
+			<!-- <input type="hidden" th:field="*{userId}" /> -->
 
-					<!-- MEMO: exsitsClass:活性化 bg-secondary:非活性 -->
-					<tr th:each="item: ${departmentList}" th:classappend="${item.employeeExsits}? 'exsits' : 'bg-secondary'">
-						<td th:text="${item.employeeId}"></td>
-						<td th:text="${item.employeeName}"></td>
-						<td th:text="${item.area}"></td>
-						<td th:text="${item.profit}"></td>
-						<td th:text="${item.customer}"></td>
-						<td th:text="${#dates.format(item.updateTime,'YYYY/MM/dd HH:mm:ss')}"></td>
-						<!-- ボタンエリア -->
-						<!-- FIXME:入れ子になって見にくい + 冗長的なので修正したい -->
-						<td>
-							<a th:href="@{'/department/employee/' + ${item.employeeId}}">
-								<button class="btn btn-primary" th:disabled="${item.employeeExsits} == false">編集</button>
-							</a>
-						</td>
-						<!-- 	<form id="user-detail-form" method="post" th:action="@{/department/sector}"> -->
+			<div>
+				<table class="table table-striped table-bordered table-hover">
+					<thead class="thead-light">
+						<tr>
+							<th class="th-width">社員番号</th>
+							<th class="th-width">氏名</th>
+							<th class="th-width">担当地区</th>
+							<th class="th-width">売上</th>
+							<th class="th-width">保有顧客数</th>
+							<th class="th-width">更新日時</th>
+							<th></th>
+							<th></th>
+							<th class="th-width">存在要否</th>
+						</tr>
+					</thead>
+					<tbody id="exsitsList">
 
-						<!-- class="form-signup" th:object="${userDetailForm}" -->
-						<!-- <input type="hidden" th:field="*{userId}" /> -->
-
-						<td>
-							<button class="btn btn-danger" type="button" id="retire" name="retire" onClick="retireClick()" th:disabled="${item.employeeExsits} == false" >退職</button>
-						</td>
-						<td th:text="${item.employeeExsits}"></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
+						<!-- MEMO: exsitsClass:活性化 bg-secondary:非活性 -->
+						<tr th:each="item: ${departmentList}" th:classappend="${item.employeeExsits}? 'exsits' : 'bg-secondary'">
+							<td th:text="${item.employeeId}"></td>
+							<td th:text="${item.employeeName}"></td>
+							<td th:text="${item.area}"></td>
+							<td th:text="${item.profit}"></td>
+							<td th:text="${item.customer}"></td>
+							<td th:text="${#dates.format(item.updateTime,'YYYY/MM/dd HH:mm:ss')}"></td>
+							<!-- ボタンエリア -->
+							<!-- FIXME:入れ子になって見にくい + 冗長的なので修正したい -->
+							<td>
+								<a th:href="@{'/department/employee/' + ${item.employeeId}}">
+									<button class="btn btn-primary" type="button" th:disabled="${item.employeeExsits} == false">編集</button>
+								</a>
+							</td>
+							<td>
+								<button class="btn btn-danger" th:id="${item.employeeId}" type="button" th:disabled="${item.employeeExsits} == false">退職</button>
+								<!-- id="retire" name="retire" -->
+								<!--  onClick="retireClick()" -->
+							</td>
+							<td th:text="${item.employeeExsits}"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</form>
 	</div>
 </body>
 </html>
