課題A・js修正（藤本さん確認済み）

--- a/EmployeeManagement/src/main/resources/templates/department/sector.html
+++ b/EmployeeManagement/src/main/resources/templates/department/sector.html
@@ -33,7 +33,7 @@ window.onload = function(){
 	<div layout:fragment="content">
 	<!-- <button class="btn btn-danger" id="test" data-id="data-idテスト" type="button">テスト</button> -->
 		<div class="header border-bottom">
-			<h1 class="h2">社員別一覧画面</h1>
+			<h1 class="h2">営業成績（社員別）</h1>
 		</div>
 
 		<table class="table table-borderless">
