--- a/EmployeeManagement/src/main/resources/templates/employee/edit.html
+++ b/EmployeeManagement/src/main/resources/templates/employee/edit.html
@@ -61,7 +61,7 @@ ayout"
 			<!-- ボタンエリア -->
 			<div class="text-center">
 				<!-- 更新ボタン -->
-				<button class="btn btn-primary" type="button" name="update" >更新</button>
+				<button class="btn btn-primary" type="submit" name="update" >更新</button>
 			</div>
 		</form>
 	</div>
