--- a/EmployeeManagement/src/main/resources/templates/layout/menu.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/menu.html
@@ -14,7 +14,7 @@
 		<hr>
 		<!-- TODO:パスを変える -->
 		<ul class="nav nav-pills nav-stacked">
-			<li role="presentation"><a class="nav-link" th:href="@{'/employee/signup'}">一括社員登録</a></li>
+			<li role="presentation"><a class="nav-link" th:href="@{'/department/bulk'}">一括社員登録</a></li>
 		</ul>
 		<hr>
 		<ul class="nav nav-pills nav-stacked">
