--- a/EmployeeManagement/src/main/resources/templates/department/department.html
+++ b/EmployeeManagement/src/main/resources/templates/department/department.html
@@ -11,7 +11,7 @@
 <body class="bg-light">
 	<div layout:fragment="content">
 		<div class="header border-bottom">
-			<h1 class="h2">部門一覧画面</h1>
+			<h1 class="h2">部門一覧</h1>
 		</div>
 		<!-- 一覧表示 -->
 		<div>
