--- a/SpringBootSample_r5/src/main/resources/templates/user/detail.html
+++ b/SpringBootSample_r5/src/main/resources/templates/user/detail.html
@@ -7,6 +7,8 @@ ayout"
 <title>ユーザー詳細</title>
 <!-- CSS読込 -->
 <link rel="stylesheet" th:href="@{/css/user/list.css}">
+<!-- JS読込 -->
+<script th:src="@{/js/user/detail.js}" defer></script>
 </head>
 <body>
 	<div layout:fragment="content">
@@ -48,7 +50,7 @@ ayout"
 					<tr>
 						<th>部署名</th>
 						<td><span th:if="*{department != null}"
-							th:text="*{department.departmentName}"> </span></td>
+							th:text="*{department.departmentName}"></span></td>
 					</tr>
 				</tbody>
 			</table>
@@ -61,6 +63,16 @@ ayout"
 				<button class="btn btn-primary" type="submit" name="update">
 					更新</button>
 			</div>
+			<!-- RESTボタンエリア -->
+			<div class="text-center mt-2">
+				<!-- 削除ボタン -->
+				<button id="btn-delete" class="btn btn-danger" type="button">
+					削除(REST)</button>
+				<!-- 更新ボタン -->
+				<button id="btn-update" class="btn btn-primary" type="button">
+					更新(REST)</button>
+			</div>
+			<!-- 給料
 			<!-- 給料情報 -->
 			<th:block th:if="*{salaryList != null and salaryList.size() > 0}">
 				<div class="header border-bottom">
