--- a/EmployeeManagement/src/main/resources/templates/department/bulk.html
+++ b/EmployeeManagement/src/main/resources/templates/department/bulk.html
@@ -1,75 +1,120 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
-<head>
-<title>社員一覧</title>
-<!-- 個別CSS・Js読込 -->
-<link rel="stylesheet" th:href="@{/css/department/list.css}" />
-<script th:src="@{/js/bulk.js}" type="text/javascript"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js" type="text/javascript"></script> -->
-</head>
-<body class="bg-light">
-	<div layout:fragment="content">
-		<!-- <button class="btn btn-danger" id="test" data-id="data-idテスト" type="button">テスト</button> -->
-		<div class="header border-bottom">
-			<h1 class="h2">一括社員登録</h1>
-		</div>
-		<form name="form" id="bulk-form" method="post" th:action="@{/department/bulk/signup}">
-			<!-- <form name="form" id="bulk-form"> -->
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{layout/layout}"
+>
+  <head>
+    <title>社員一覧</title>
+    <!-- 個別CSS・Js読込 -->
+    <link rel="stylesheet" th:href="@{/css/department/list.css}" />
+    <script th:src="@{/js/bulk.js}" type="text/javascript"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js" type="text/javascript"></script> -->
+  </head>
+  <body class="bg-light">
+    <div layout:fragment="content">
+      <!-- <button class="btn btn-danger" id="test" data-id="data-idテスト" type="button">テスト</button> -->
+      <div class="header border-bottom">
+        <h1 class="h2">一括社員登録</h1>
+      </div>
+      <form
+        name="form"
+        id="bulk-form"
+        method="post"
+        th:action="@{/department/bulk/signup}"
+      >
+        <!-- <form name="form" id="bulk-form"> -->
 
-			<button class="btn btn-dark reset-table" type="button">リセット</button>
-			<button class="btn btn-primary insert-row" type="button">行新規</button>
-			<button class="btn btn-secondary clone-row" type="button">行複製</button>
-			<button class="btn btn-warning tmp-save" type="button" name="tmpsaves">一時保存</button>
-			<button class="btn btn-success confirm" type="button" name="confirm">確定</button>
-			<table class="table table-striped table-bordered table-hover">
-				<thead class="thead-light">
-					<tr>
-						<th class="th-width">氏名</th>
-						<th class="th-width">担当地区</th>
-						<th class="th-width">売上</th>
-						<th class="th-width">保有顧客数</th>
-						<th class="th-width">課番号</th>
-						<th></th>
-						<!-- <th class="th-width">Temp要否</th> -->
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="postList" th:each="item,stat: ${departmentList}">
-						<!-- id="departmentSectorList[__${stat.index}__].employeeId" -->
-						<!-- th:id="${item.employeeId}" -->
-						<th:block>
-					<!-- <input th:name="departmentSectorList[__${stat.index}__].employeeName" type="hidden" class="form-control" th:value="${item.employeeName}"> -->
+        <button class="btn btn-dark reset-table" type="button">リセット</button>
+        <button class="btn btn-primary insert-row" type="button">行新規</button>
+        <button class="btn btn-secondary clone-row" type="button">
+          行複製
+        </button>
+        <button class="btn btn-warning tmp-save" type="button" name="tmpsaves">
+          一時保存
+        </button>
+        <button class="btn btn-success confirm" type="button" name="confirm">
+          確定
+        </button>
+        <table class="table table-striped table-bordered table-hover">
+          <thead class="thead-light">
+            <tr>
+              <th class="th-width">氏名</th>
+              <th class="th-width">担当地区</th>
+              <th class="th-width">売上</th>
+              <th class="th-width">保有顧客数</th>
+              <th class="th-width">課番号</th>
+              <th></th>
+              <!-- <th class="th-width">Temp要否</th> -->
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="postList" th:each="item,stat: ${departmentList}">
+              <!-- id="departmentSectorList[__${stat.index}__].employeeId" -->
+              <!-- th:id="${item.employeeId}" -->
+              <!-- <th:block>
 							<input th:name="departmentSectorList[__${stat.index}__].employeeId" type="hidden" class="form-control" th:value="${item.employeeId}">
-						</th:block>
-						<td>
-							<input th:name="departmentSectorList[__${stat.index}__].employeeName" type="text" class="form-control" th:value="${item.employeeName}" />
-						</td>
-						<td>
-							<input th:name="departmentSectorList[__${stat.index}__].area" type="text" class="form-control" th:value="${item.area}" />
-						</td>
-						<td>
-							<input th:name="departmentSectorList[__${stat.index}__].profit" type="text" class="form-control" th:value="${item.profit}" />
-						</td>
-						<td>
-							<input th:name="departmentSectorList[__${stat.index}__].customer" type="text" class="form-control" th:value="${item.customer}" />
-						</td>
-						<td>
-							<input th:name="departmentSectorList[__${stat.index}__].departmentId" type="text" class="form-control" th:value="${item.departmentId}" />
-						</td>
-						<td>
-							<!-- <button name="employeeId" class="btn btn-danger delete-row" th:id="${item.employeeId}" type="button">削除</button> -->
-							<button name="button" class="btn btn-danger delete-row" type="button">削除</button>
-						</td>
-						<!-- th:disabled="${item.employeeNotExsits}" -->
-						<!-- TODO:後で消す↓ -->
-						<!-- <td>
+						</th:block> -->
+              <td>
+                <input
+                  th:name="departmentSectorList[__${stat.index}__].employeeName"
+                  type="text"
+                  class="form-control"
+                  th:value="${item.employeeName}"
+                />
+              </td>
+              <td>
+                <input
+                  th:name="departmentSectorList[__${stat.index}__].area"
+                  type="text"
+                  class="form-control"
+                  th:value="${item.area}"
+                />
+              </td>
+              <td>
+                <input
+                  th:name="departmentSectorList[__${stat.index}__].profit"
+                  type="text"
+                  class="form-control"
+                  th:value="${item.profit}"
+                />
+              </td>
+              <td>
+                <input
+                  th:name="departmentSectorList[__${stat.index}__].customer"
+                  type="text"
+                  class="form-control"
+                  th:value="${item.customer}"
+                />
+              </td>
+              <td>
+                <input
+                  th:name="departmentSectorList[__${stat.index}__].departmentId"
+                  type="text"
+                  class="form-control"
+                  th:value="${item.departmentId}"
+                />
+              </td>
+              <td>
+                <!-- <button name="employeeId" class="btn btn-danger delete-row" th:id="${item.employeeId}" type="button">削除</button> -->
+                <button
+                  name="button"
+                  class="btn btn-danger delete-row"
+                  type="button"
+                >
+                  削除
+                </button>
+              </td>
+              <!-- th:disabled="${item.employeeNotExsits}" -->
+              <!-- TODO:後で消す↓ -->
+              <!-- <td>
 								<input th:name="departmentSectorList[__${stat.index}__].hasTempData" type="text" class="form-control" th:value="${item.hasTempData}">
 							</td> -->
-						<!-- <td><input th:name="departmentSectorList[__${stat.index}__]." type="text" class="form-control" th:value="${item.employeeNotExsits}"></td> -->
-					</tr>
-				</tbody>
-			</table>
-		</form>
-	</div>
-</body>
+              <!-- <td><input th:name="departmentSectorList[__${stat.index}__]." type="text" class="form-control" th:value="${item.employeeNotExsits}"></td> -->
+            </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
+  </body>
 </html>
