--- a/EmployeeManagement/src/main/resources/templates/department/bulk.html
+++ b/EmployeeManagement/src/main/resources/templates/department/bulk.html
@@ -9,6 +9,10 @@
     <!-- 個別CSS・Js読込 -->
     <link rel="stylesheet" th:href="@{/css/department/list.css}" />
     <script th:src="@{/js/bulk.js}" type="text/javascript"></script>
+    <script
+      th:src="@{/js/jquery.validate.min.js}"
+      type="text/javascript"
+    ></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js" type="text/javascript"></script> -->
   </head>
   <body class="bg-light">
@@ -17,14 +21,17 @@
       <div class="header border-bottom">
         <h1 class="h2">一括社員登録</h1>
       </div>
+      <table>
+        <tr th:if="${errorList}" th:each="error : ${errorList}">
+          <td style="color: red" th:text="${error}"></td>
+        </tr>
+      </table>
       <form
         name="form"
         id="bulk-form"
         method="post"
-        th:action="@{/department/bulk/signup}"
+        th:action="@{/department/bulk}"
       >
-        <!-- <form name="form" id="bulk-form"> -->
-
         <button class="btn btn-dark reset-table" type="button">リセット</button>
         <button class="btn btn-primary insert-row" type="button">行新規</button>
         <button class="btn btn-secondary clone-row" type="button">
@@ -33,7 +40,7 @@
         <button class="btn btn-warning tmp-save" type="button" name="tmpsaves">
           一時保存
         </button>
-        <button class="btn btn-success confirm" type="button" name="confirm">
+        <button class="btn btn-success confirm" type="post" name="confirm">
           確定
         </button>
         <table class="table table-striped table-bordered table-hover">
@@ -45,13 +52,10 @@
               <th class="th-width">保有顧客数</th>
               <th class="th-width">課番号</th>
               <th></th>
-              <!-- <th class="th-width">Temp要否</th> -->
             </tr>
           </thead>
           <tbody>
             <tr class="postList" th:each="item,stat: ${departmentList}">
-              <!-- id="departmentSectorList[__${stat.index}__].employeeId" -->
-              <!-- th:id="${item.employeeId}" -->
               <!-- <th:block>
 							<input th:name="departmentSectorList[__${stat.index}__].employeeId" type="hidden" class="form-control" th:value="${item.employeeId}">
 						</th:block> -->
@@ -96,7 +100,6 @@
                 />
               </td>
               <td>
-                <!-- <button name="employeeId" class="btn btn-danger delete-row" th:id="${item.employeeId}" type="button">削除</button> -->
                 <button
                   name="button"
                   class="btn btn-danger delete-row"
@@ -105,12 +108,6 @@
                   削除
                 </button>
               </td>
-              <!-- th:disabled="${item.employeeNotExsits}" -->
-              <!-- TODO:後で消す↓ -->
-              <!-- <td>
-								<input th:name="departmentSectorList[__${stat.index}__].hasTempData" type="text" class="form-control" th:value="${item.hasTempData}">
-							</td> -->
-              <!-- <td><input th:name="departmentSectorList[__${stat.index}__]." type="text" class="form-control" th:value="${item.employeeNotExsits}"></td> -->
             </tr>
           </tbody>
         </table>
