--- a/EmployeeManagement/src/main/resources/templates/layout/header.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/header.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <head>
 </head>
 <body>
-	<nav layout:fragment="header"
-		class="navbar navbar-inverse navbar-fixed-topnavbar-dark bg-dark">
+	<nav layout:fragment="header" class="navbar navbar-inverse navbar-fixed-topnavbar-dark bg-dark">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/employee/list">社員管理システム</a>
