--- a/EmployeeManagement/src/main/resources/templates/layout/layout.html
+++ b/EmployeeManagement/src/main/resources/templates/layout/layout.html
@@ -9,11 +9,11 @@
 <!-- 共通JS読込 -->
 <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
  -->
-<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
  -->
- <!-- <script src="webjars/jquery/3.5.1/jquery.min.js"></script> -->
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
+<!-- <script src="webjars/jquery/3.5.1/jquery.min.js"></script> -->
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
 <title></title>
 </head>
